add Dict Cache to cell editor